--- a/index.html
+++ b/index.html
@@ -2,30 +2,49 @@
 <html lang="fr">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Document</title>
+
 </head>
 
 <style>
-    div {
-        width: 100px;
-        height: 100px;
+    .div-color {
+        width: 80px;
+        height: 80px;
         border: 1px solid black;
-        margin-bottom: 20px;
+        margin: 1px;
     }
 </style>
 
 <body>
-    <p></p>
-    <div></div>
-    <button>Rafraîchir</button>
+    <div class="container">
+        <div class="d-flex justify-content-center m-2">
+            <input type="number" aria-describedby="button-addon2">
+            <button class="btn btn-primary ml-1" type="button" id="button-addon2">Générer</button>
+        </div>
+        <div class="d-flex justify-content-center flex-wrap couleurs"></div>
+    </div>
+
 </body>
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
 <script>
-    function fetchColor() {
-        fetch("https://api.noopschallenge.com/hexbot")
+    function fetchColor(valeur) {
+        fetch("https://api.noopschallenge.com/hexbot?count=" + valeur)
             .then((response) => { return response.json(); })
             .then((data) => { displayColor(data) })
             .catch(function (error) {
@@ -34,13 +53,29 @@
     }
 
     function displayColor(data) {
-        let couleur = data.colors[0].value;
-        document.querySelector("p").innerText = couleur;
-        document.querySelector("div").style.backgroundColor = couleur;
+        document.querySelector(".couleurs").innerHTML = "";
+        data.colors.forEach(element => {
+            // generateParagraph(element.value);
+            generateDiv(element.value);
+        });
     }
 
-    fetchColor()
-    document.querySelector("button").addEventListener("click", () => { fetchColor() })
+    function generateParagraph(value) {
+        let temp = document.createElement("p");
+        temp.innerText = value;
+        document.querySelector("div:last-of-type").append(temp);
+    }
+
+    function generateDiv(value) {
+        let temp = document.createElement("div");
+        temp.className = "div-color";
+        temp.style.backgroundColor = value;
+        document.querySelector(".couleurs").append(temp);
+    }
+
+    // window.setInterval(function() { fetchColor(document.querySelector("input").value) }, 500);
+    fetchColor(document.querySelector("input").value)
+    document.querySelector("button").addEventListener("click", () => { fetchColor(document.querySelector("input").value) });
 </script>
 
 </html>
